--- a/kysely.html
+++ b/kysely.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 17:25:32 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 12:16:02 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Kysely</title>
@@ -87,13 +87,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="https://www.nords.fi">Home 01</a>
+                    <a href="index.html">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02">Home 02</a>
+                    <a href="home/home-02.html">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03">Home 03</a>
+                    <a href="home/home-03.html">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -110,13 +110,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01">Product 01</a>
+                    <a href="product/product-01.html">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02">Product 02</a>
+                    <a href="product/product-02.html">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03">Product 03</a>
+                    <a href="product/product-03.html">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -133,13 +133,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01">Contact 01</a>
+                    <a href="contact/contact-01.html">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02">Contact 02</a>
+                    <a href="contact/contact-02.html">Contact 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="ota-yhteytta">Contact 03</a>
+                    <a href="ota-yhteytta.html">Contact 03</a>
                   </div>
                 </div>
               </div>
@@ -156,19 +156,19 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="hinnasto">Pricing</a>
+                    <a href="hinnasto.html">Pricing</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tiimi">Company</a>
+                    <a href="tiimi.html">Company</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tyot">Career</a>
+                    <a href="tyot.html">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo">Demo</a>
+                    <a href="company/demo.html">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon">Coming Soon</a>
+                    <a href="company/coming-soon.html">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -214,13 +214,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="resource/resources">Resources</a>
+                    <a href="resource/resources.html">Resources</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/guide">Guide</a>
+                    <a href="resource/guide.html">Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/blog">Blog</a>
+                    <a href="resource/blog.html">Blog</a>
                   </div>
                 </div>
               </div>
@@ -237,13 +237,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="palveluehdot">Terms &amp; Conditions</a>
+                    <a href="palveluehdot.html">Terms &amp; Conditions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tietosuojaseloste">Privacy Policy</a>
+                    <a href="tietosuojaseloste.html">Privacy Policy</a>
                   </div>
                   <div class="modal__link">
-                    <a href="legal/cookie-policy">Cookie Policy</a>
+                    <a href="legal/cookie-policy.html">Cookie Policy</a>
                   </div>
                 </div>
               </div>
@@ -260,13 +260,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in">Sign In</a>
+                    <a href="auth/sign-in.html">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up">Sign Up</a>
+                    <a href="auth/sign-up.html">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset">Password Reset</a>
+                    <a href="auth/password-reset.html">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -283,13 +283,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="search">Search</a>
+                    <a href="search.html">Search</a>
                   </div>
                   <div class="modal__link">
-                    <a href="401">Login</a>
+                    <a href="401.html">Login</a>
                   </div>
                   <div class="modal__link">
-                    <a href="404">Not Found</a>
+                    <a href="404.html">Not Found</a>
                   </div>
                 </div>
               </div>
@@ -306,16 +306,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions">Instructions</a>
+                    <a href="documentation/instructions.html">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide">Style Guide</a>
+                    <a href="documentation/style-guide.html">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses">Licenses</a>
+                    <a href="documentation/licenses.html">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog">Changelog</a>
+                    <a href="documentation/changelog.html">Changelog</a>
                   </div>
                 </div>
               </div>
@@ -346,7 +346,7 @@
                   <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                     <div class="footer__about">
                       <div href="#" aria-label="brand logo" class="footer__logo-link">
-                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
+                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="Nords Oy logo valkoinen" class="logo__embed"></a>
                       </div>
                       <div class="footer__tagline">
                         <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -369,22 +369,22 @@
                       </div>
                       <div class="footer__links">
                         <div class="footer__link">
-                          <a href="https://www.nords.fi">Koti</a>
+                          <a href="index.html">Koti</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tiimi">Tiimi</a>
+                          <a href="tiimi.html">Tiimi</a>
                         </div>
                         <div class="footer__link">
-                          <a href="hinnasto">Hinnasto</a>
+                          <a href="hinnasto.html">Hinnasto</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tyot">Työt</a>
+                          <a href="tyot.html">Työt</a>
                         </div>
                         <div class="footer__link">
-                          <a href="asiakaspalautteet">Asiakaspalautteet</a>
+                          <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
                         </div>
                         <div class="footer__link">
-                          <a href="ota-yhteytta">Ota yhteyttä</a>
+                          <a href="ota-yhteytta.html">Ota yhteyttä</a>
                         </div>
                       </div>
                     </div>
@@ -407,7 +407,7 @@
                   </div>
                 </div>
                 <div class="footer__section footer__section--bottom">
-                  <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a209-12c5a19d" class="footer__logo"><img src="images/nords-oy-logo-harmaa.webp" loading="lazy" alt="" class="footer__logo-embed"></div>
+                  <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a209-12c5a19d" class="footer__logo"><img src="images/nords-oy-logo-harmaa.webp" loading="lazy" alt="Nords Oy logo harmaa" class="footer__logo-embed"></div>
                   <div id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a20c-12c5a19d" class="footer__bottom-nav">
                     <div class="footer__copyright">
                       <div class="split-link">
@@ -418,10 +418,10 @@
                     </div>
                     <div class="footer__legal">
                       <div class="footer__link link--legal">
-                        <a href="tietosuojaseloste">Tietosuojaseloste</a>
+                        <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
                       </div>
                       <div class="footer__link link--legal">
-                        <a href="palveluehdot">Palveluehdot</a>
+                        <a href="palveluehdot.html">Palveluehdot</a>
                       </div>
                     </div>
                   </div>
@@ -436,7 +436,7 @@
   <div class="utilities">
     <div data-wf--cursor---hover--variant="primary" class="hover-cursor__component">
       <div class="hover-cursor__wrap">
-        <div class="hover-cursor__icon"><img src="images/arrow-1.svg" loading="lazy" alt="" class="image-7"></div>
+        <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
     <div data-wf--loader---global--variant="primary" class="loader"></div>
