--- a/palveluehdot.html
+++ b/palveluehdot.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 17:25:32 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="69342031af17f8cbbfc791f4" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
+<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 12:16:02 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="69342031af17f8cbbfc791f4" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Nords Oy</title>
@@ -27,71 +27,71 @@
               <div>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd7-5d35ddd5" class="nav__container">
                   <div href="#" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd8-5d35ddd5" class="nav__logo-wrap logo--tablet">
-                    <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                    <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
                   </div>
                   <nav role="navigation" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dddb-5d35ddd5" class="nav__menu-wrap w-nav-menu">
                     <div href="#" class="nav__logo-wrap">
-                      <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                      <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="Nords Oy logo" class="nav__logo-embed"></a>
                     </div>
                     <div class="nav__menu menu--desktop">
-                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                      <a href="index.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi" class="nav-link w-inline-block">
+                      <a href="tiimi.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto" class="nav-link w-inline-block">
+                      <a href="hinnasto.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot" class="nav-link w-inline-block">
+                      <a href="tyot.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
                       </a>
                     </div>
                     <div class="nav__menu menu--tablet">
-                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                      <a href="index.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi" class="nav-link w-inline-block">
+                      <a href="tiimi.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto" class="nav-link w-inline-block">
+                      <a href="hinnasto.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot" class="nav-link w-inline-block">
+                      <a href="tyot.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
@@ -99,12 +99,12 @@
                     </div>
                   </nav>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dec2-5d35ddd5" class="nav__btn">
-                    <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
+                    <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
                       <div class="btn__label-wrap btn--overlay">
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
                       </div>
-                      <div class="btn__icon"><img src="images/arrow.svg" loading="lazy" alt="" class="image-4"></div>
+                      <div class="btn__icon"><img src="images/valkoinen-nuoli.svg" loading="lazy" alt="Valkoinen nuoli" class="image-4"></div>
                     </a>
                   </div>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35decd-5d35ddd5" class="nav__menu-btn w-nav-button">
@@ -243,13 +243,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="https://www.nords.fi">Home 01</a>
+                    <a href="index.html">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02">Home 02</a>
+                    <a href="home/home-02.html">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03">Home 03</a>
+                    <a href="home/home-03.html">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -266,13 +266,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01">Product 01</a>
+                    <a href="product/product-01.html">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02">Product 02</a>
+                    <a href="product/product-02.html">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03">Product 03</a>
+                    <a href="product/product-03.html">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -289,13 +289,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01">Contact 01</a>
+                    <a href="contact/contact-01.html">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02">Contact 02</a>
+                    <a href="contact/contact-02.html">Contact 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="ota-yhteytta">Contact 03</a>
+                    <a href="ota-yhteytta.html">Contact 03</a>
                   </div>
                 </div>
               </div>
@@ -312,19 +312,19 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="hinnasto">Pricing</a>
+                    <a href="hinnasto.html">Pricing</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tiimi">Company</a>
+                    <a href="tiimi.html">Company</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tyot">Career</a>
+                    <a href="tyot.html">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo">Demo</a>
+                    <a href="company/demo.html">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon">Coming Soon</a>
+                    <a href="company/coming-soon.html">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -370,13 +370,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="resource/resources">Resources</a>
+                    <a href="resource/resources.html">Resources</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/guide">Guide</a>
+                    <a href="resource/guide.html">Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/blog">Blog</a>
+                    <a href="resource/blog.html">Blog</a>
                   </div>
                 </div>
               </div>
@@ -393,13 +393,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="palveluehdot" aria-current="page" class="w--current">Terms &amp; Conditions</a>
+                    <a href="palveluehdot.html" aria-current="page" class="w--current">Terms &amp; Conditions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tietosuojaseloste">Privacy Policy</a>
+                    <a href="tietosuojaseloste.html">Privacy Policy</a>
                   </div>
                   <div class="modal__link">
-                    <a href="legal/cookie-policy">Cookie Policy</a>
+                    <a href="legal/cookie-policy.html">Cookie Policy</a>
                   </div>
                 </div>
               </div>
@@ -416,13 +416,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in">Sign In</a>
+                    <a href="auth/sign-in.html">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up">Sign Up</a>
+                    <a href="auth/sign-up.html">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset">Password Reset</a>
+                    <a href="auth/password-reset.html">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -439,13 +439,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="search">Search</a>
+                    <a href="search.html">Search</a>
                   </div>
                   <div class="modal__link">
-                    <a href="401">Login</a>
+                    <a href="401.html">Login</a>
                   </div>
                   <div class="modal__link">
-                    <a href="404">Not Found</a>
+                    <a href="404.html">Not Found</a>
                   </div>
                 </div>
               </div>
@@ -462,16 +462,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions">Instructions</a>
+                    <a href="documentation/instructions.html">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide">Style Guide</a>
+                    <a href="documentation/style-guide.html">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses">Licenses</a>
+                    <a href="documentation/licenses.html">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog">Changelog</a>
+                    <a href="documentation/changelog.html">Changelog</a>
                   </div>
                 </div>
               </div>
@@ -502,7 +502,7 @@
                   <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                     <div class="footer__about">
                       <div href="#" aria-label="brand logo" class="footer__logo-link">
-                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
+                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="Nords Oy logo valkoinen" class="logo__embed"></a>
                       </div>
                       <div class="footer__tagline">
                         <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -525,22 +525,22 @@
                       </div>
                       <div class="footer__links">
                         <div class="footer__link">
-                          <a href="https://www.nords.fi">Koti</a>
+                          <a href="index.html">Koti</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tiimi">Tiimi</a>
+                          <a href="tiimi.html">Tiimi</a>
                         </div>
                         <div class="footer__link">
-                          <a href="hinnasto">Hinnasto</a>
+                          <a href="hinnasto.html">Hinnasto</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tyot">Työt</a>
+                          <a href="tyot.html">Työt</a>
                         </div>
                         <div class="footer__link">
-                          <a href="asiakaspalautteet">Asiakaspalautteet</a>
+                          <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
                         </div>
                         <div class="footer__link">
-                          <a href="ota-yhteytta">Ota yhteyttä</a>
+                          <a href="ota-yhteytta.html">Ota yhteyttä</a>
                         </div>
                       </div>
                     </div>
@@ -563,7 +563,7 @@
                   </div>
                 </div>
                 <div class="footer__section footer__section--bottom">
-                  <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a209-12c5a19d" class="footer__logo"><img src="images/nords-oy-logo-harmaa.webp" loading="lazy" alt="" class="footer__logo-embed"></div>
+                  <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a209-12c5a19d" class="footer__logo"><img src="images/nords-oy-logo-harmaa.webp" loading="lazy" alt="Nords Oy logo harmaa" class="footer__logo-embed"></div>
                   <div id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a20c-12c5a19d" class="footer__bottom-nav">
                     <div class="footer__copyright">
                       <div class="split-link">
@@ -574,10 +574,10 @@
                     </div>
                     <div class="footer__legal">
                       <div class="footer__link link--legal">
-                        <a href="tietosuojaseloste">Tietosuojaseloste</a>
+                        <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
                       </div>
                       <div class="footer__link link--legal">
-                        <a href="palveluehdot" aria-current="page" class="w--current">Palveluehdot</a>
+                        <a href="palveluehdot.html" aria-current="page" class="w--current">Palveluehdot</a>
                       </div>
                     </div>
                   </div>
@@ -592,7 +592,7 @@
   <div class="utilities">
     <div data-wf--cursor---hover--variant="primary" class="hover-cursor__component">
       <div class="hover-cursor__wrap">
-        <div class="hover-cursor__icon"><img src="images/arrow-1.svg" loading="lazy" alt="" class="image-7"></div>
+        <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
     <div data-wf--loader---global--variant="primary" class="loader"></div>
